
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.40.2]]
== 0.40.2 (09.09.2019)

icon:check[] Core: The default value for the OrientDB parameter `tx.retry.delay` has been increased to 10ms, and the constant delay will be used instead of growing linearly. It is now possible to configure the delay via the `MESH_GRAPH_TX_RETRY_DELAY` environment variable.

icon:check[] Config: It is now possible to override the mapping mode with the `MESH_ELASTICSEARCH_MAPPING_MODE` environment variable. link:https://github.com/gentics/mesh/issues/878[#878]

[[v0.40.1]]
== 0.40.1 (06.09.2019)

CAUTION: REST: When updating permissions to an element, unset permissions in the request will not change these permissions anymore. Previously, unset permission were set to false.

icon:check[] Core: Various handlers were blocking the event loop when run. This has been fixed now.

icon:check[] Core: Fixed delayed initialization of `VersionPurgeJobImpl` vertices. Previously the type was not setup during start up and this resulted in a warning when the type was first used.

icon:plus[] Java Rest Client: The `createSchema()` methods now accept a `ParameterProvider` vararg parameter.

icon:check[] Core: Schema validation will no longer fail by default, when Elasticsearch is not available. The previous behavior can be enforced by adding `?strictValidation=true`.

icon:check[] GraphQL: Fixed a bug that prevented loading of permissions of an element.

icon:plus[] GraphQL: Added the `rolePerms` field to mesh elements. This allows you to load permissions of a role, similar to the link:{{< relref "features.asciidoc" >}}#_querying_permissions[`?role` query parameter in REST].

[[v0.40.0]]
== 0.40.0 (27.08.2019)

icon:bullhorn[] Image Manipulation: The new resizing options `smart`, `prop` and `force` have been added.

[quote]
____
